@startuml Front Architecture

' Page

class Page{}
Page "1" o-- "0..*" Chunk : "List"

' Chunks

abstract class Chunk{
	+ baseDiv
}
Chunk <|-- SingleArticleChunk
Chunk <|-- CategorizedArticlesChunk
Chunk <|-- HasChildArticlesChunk
Chunk "1" o- "0..*" Article : "List"

class SingleArticleChunk {}
class CategorizedArticlesChunk {}
class HasChildArticlesChunk {}

class ChunkFactory {}

' Articles

abstract class Article{}
Article <|-- SimpleArticle
Article <|-- ChildArticle

class SimpleArticle{}

class ChildArticle{}

@enduml
